# agent-skills

./: README.md
contract-extractor/: SKILL.md
data-profiler/: SKILL.md
data-tools-mcp/: pyproject.toml
data-tools-mcp/src/data_tools/: server.py
debug-trail/: SKILL.md
doc-tools-mcp/: README.md  pyproject.toml
doc-tools-mcp/src/doc_tools/: server.py
env-doctor/: SKILL.md
git-context-mcp/: pyproject.toml
git-context-mcp/src/git_context/: server.py
notebook-runner-mcp/: pyproject.toml
notebook-runner-mcp/src/notebook_runner/: server.py
paper-digest/: SKILL.md
pdf-to-book/: SKILL.md
receipt-scanner/: SKILL.md
repo-onboarder/: SKILL.md
scanned-doc-reader/: AGENTS.md  SKILL.md
session-handoff/: SKILL.md
session-handoff/scripts/: envelope_session.py
slide-deck-reader/: SKILL.md
whiteboard-to-notes/: SKILL.md
