[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-tools-mcp"
version = "0.1.0"
description = "MCP server for data file profiling and database schema inspection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "pandas", "sql", "data", "schema", "profiling"]
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
data-tools-mcp = "data_tools.server:main"

[project.urls]
Repository = "https://github.com/Sakethv7/agent-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/data_tools"]
