[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-tools-mcp"
version = "0.1.0"
description = "MCP server exposing PDF text extraction and OCR as callable tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "pdf", "ocr", "tesseract", "document"]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
doc-tools-mcp = "doc_tools.server:main"

[project.urls]
Repository = "https://github.com/Sakethv7/agent-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_tools"]
