[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-context-mcp"
version = "0.1.0"
description = "MCP server for git operations, GitHub PRs, and GitLab MRs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "git", "github", "gitlab", "pr", "pull-request"]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
git-context-mcp = "git_context.server:main"

[project.urls]
Repository = "https://github.com/Sakethv7/agent-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/git_context"]
