[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook-runner-mcp"
version = "0.1.0"
description = "MCP server for reading, editing, and executing Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "jupyter", "notebook", "nbformat"]
dependencies = [
    "mcp>=1.0.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.0.0",
    "jupyter_client>=8.0.0",
]

[project.scripts]
notebook-runner-mcp = "notebook_runner.server:main"

[project.urls]
Repository = "https://github.com/Sakethv7/agent-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_runner"]
